# APISocial

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: 35e2409169d4_initial_revision.py  59a990556518_init.py  71aa223179b7_init.py  c29453936ede_init.py
src/: main.py  message.py
src/auth/: crud.py  dependencies.py  helper.py  models.py  routers.py  schemas.py  services.py  utils.py  validation.py
src/auth/routers/: login_handlers.py  user_handlers.py
src/auth/services/: auth_service.py  dependencies.py  (+4 more)
src/common/: base_model.py  message.py
src/config/: environment.py  settings.py
src/core/: __init__.py  celery_config.py  db_cache.py  mongo_depends.py  settings.py
src/cruds/: auth.py  auth_crud.py  profile.py  profile_crud.py  user.py  user_crud.py
src/database/: db.py  enums.py
src/profile/: models.py  routers.py  schemas.py
src/routers/: __init__.py  auth.py  auth_router.py  post_router.py  profile.py  profile_router.py  user.py
src/schemas/: auth.py  auth_schema.py  post_schema.py  profile.py  profile_schema.py  user.py  user_schema.py
src/services/: auth.py  auth_service.py  cookie.py  dependencies.py  post_service.py  profile.py  profile_service.py  security.py  user.py  utils.py  validations.py
src/tasks/: confirmation_email.py
tests/: conftest.py  data_for_tests.py  for_test.py  test_auth.py  test_validation.py  utils.py
tests/auth/: conftest.py  test_refresh.py  test_signin.py  test_validation.py  utils.py  utils_auth.py
tests/profile/: test_validation.py  utils_profile.py
(+30 files in other folders)
