[project]
name = "apisocial"
version = "0.1.0"
description = ""
authors = [
    {name = "Kredo15",email = "kredo1511@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "setuptools (>=80.9.0,<81.0.0)",
    "fastapi (>=0.115.14,<0.116.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
